fix header nav spacing

--- a/src/_includes/site.css
+++ b/src/_includes/site.css
@@ -138,7 +138,7 @@ body {
 
 .site-header nav ul {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(5, auto);
   gap: 2rem;
 }
 
